[gd_scene load_steps=5 format=3 uid="uid://deqd23wu358fa"]

[ext_resource type="FontFile" uid="uid://bfawprnajfbaw" path="res://Assets/Fonts/CleanPlate.fnt" id="1_0emk2"]
[ext_resource type="Script" uid="uid://bacgmpwe4h6kn" path="res://scripts/login.gd" id="1_cs5o2"]
[ext_resource type="FontFile" uid="uid://durpk3530uu50" path="res://Assets/Fonts/BasicPupWhite.fnt" id="2_cs5o2"]
[ext_resource type="FontFile" uid="uid://d3cs80n8io813" path="res://Assets/Fonts/CleanVictory.fnt" id="3_47b6t"]

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cs5o2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.2
anchor_right = 0.75
anchor_bottom = 0.8

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="TopSpacer" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="UserLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_0emk2")
text = "Username or Email:"

[node name="UserEdit" type="LineEdit" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(400, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cs5o2")
placeholder_text = "Enter your username or email"

[node name="PasswordLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_0emk2")
text = "Password:"

[node name="PasswordEdit" type="LineEdit" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(400, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cs5o2")
placeholder_text = "Enter your password"
secret = true

[node name="MiddleSpacer" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="LoginButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_47b6t")
text = "Login"

[node name="ForgotPasswordButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "Forgot Password?"

[node name="BottomSpacer" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="FeedbackLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 2

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Panel/VBoxContainer/LoginButton" to="." method="_on_login_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ForgotPasswordButton" to="." method="_on_forgot_password_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
